==> antichambre/MIOS32/mios32/LPC17xx/mios32_usb_midi.c <==
#include <mios32.h>
#include <usbapi.h>
#include <usbhw_lpc.h>
#define RX_BUFFER_MAX_ANALYSIS 0
#define EP2IDX(bEP)     ((((bEP)&0xF)<<1)|(((bEP)&0x80)>>7))
#define IDX2EP(idx)     ((((idx)<<7)&0x80)|(((idx)>>1)&0xF))

s32 MIOS32_USB_MIDI_ChangeConnectionState(u8 dev, u8 connected)
{
  // in all cases: re-initialize USB MIDI driver
  // clear buffer counters and busy/wait signals again (e.g., so that no invalid data will be sent out)
  rx_buffer_tail = rx_buffer_head = rx_buffer_size = 0;
  tx_buffer_tail = tx_buffer_head = tx_buffer_size = 0;

  if( connected ) {
    transfer_possible = 1;
    tx_buffer_busy = 0; // buffer not busy anymore
  } else {
    // cable disconnected: disable transfers
    transfer_possible = 0;
    tx_buffer_busy = 1; // buffer busy
  }

  return 0; // no error
}

s32 MIOS32_USB_MIDI_PackageSend_NonBlocking(mios32_midi_package_t package)
{
  // device available?
  if( !transfer_possible )
    return -1;

  // buffer full?
  if( tx_buffer_size >= (MIOS32_USB_MIDI_TX_BUFFER_SIZE-1) ) {
    // call USB handler, so that we are able to get the buffer free again on next execution
    // (this call simplifies polling loops!)
    MIOS32_USB_MIDI_TxBufferHandler(MIOS32_USB_MIDI_DATA_IN_EP);

    // device still available?
    // (ensures that polling loop terminates if cable has been disconnected)
    if( !transfer_possible )
      return -1;

    // notify that buffer was full (request retry)
    return -2;
  }

  // put package into buffer - this operation should be atomic!
  MIOS32_IRQ_Disable();
  tx_buffer[tx_buffer_head++] = package.ALL;
  if( tx_buffer_head >= MIOS32_USB_MIDI_TX_BUFFER_SIZE )
    tx_buffer_head = 0;
  ++tx_buffer_size;
  MIOS32_IRQ_Enable();

  return 0;
}

s32 MIOS32_USB_MIDI_PackageReceive(mios32_midi_package_t *package)
{
#if RX_BUFFER_MAX_ANALYSIS
  static u16 rx_buffer_max_size = 0;
#endif

  // package received?
  if( !rx_buffer_size )
    return -1;

#if RX_BUFFER_MAX_ANALYSIS
  if( rx_buffer_size > rx_buffer_max_size ) {
    rx_buffer_max_size = rx_buffer_size;
    MIOS32_MIDI_SendDebugMessage("[MIOS32_USB_MIDI] Max Rx Buffer: %d\n", rx_buffer_max_size);
  }
#endif

  // get package - this operation should be atomic!
  MIOS32_IRQ_Disable();
  package->ALL = rx_buffer[rx_buffer_tail];
  if( ++rx_buffer_tail >= MIOS32_USB_MIDI_RX_BUFFER_SIZE )
    rx_buffer_tail = 0;
  --rx_buffer_size;
  MIOS32_IRQ_Enable();

  return rx_buffer_size;
}

static void MIOS32_USB_MIDI_TxBufferHandler(u8 bEP)
{
  // send buffered packages if
  //   - last transfer finished
  //   - new packages are in the buffer
  //   - the device is configured

  // atomic operation to avoid conflict with other interrupts
  MIOS32_IRQ_Disable();
  if( !tx_buffer_busy && tx_buffer_size && transfer_possible ) {
    s16 count = (tx_buffer_size > (MIOS32_USB_MIDI_DATA_IN_SIZE/4)) ? (MIOS32_USB_MIDI_DATA_IN_SIZE/4) : tx_buffer_size;

    // from USBHwEPWrite
        
    // set write enable for specific endpoint
    LPC_USB->USBCtrl = WR_EN | ((bEP & 0xF) << 2);

    // set packet length
    LPC_USB->USBTxPLen = 4*count;
        
    // write data
    int real_count = 0;
    while( count && (LPC_USB->USBCtrl & WR_EN) ) {
      ++real_count;
      LPC_USB->USBTxData = tx_buffer[tx_buffer_tail];
      if( ++tx_buffer_tail >= MIOS32_USB_MIDI_TX_BUFFER_SIZE )
	tx_buffer_tail = 0;
    }

    // notify that new package is sent
    tx_buffer_busy = 1;

    // send to IN pipe
    tx_buffer_size -= real_count;

    // select endpoint and validate buffer
    USBHwCmd(CMD_EP_SELECT | EP2IDX(bEP));
    USBHwCmd(CMD_EP_VALIDATE_BUFFER);
  }

  MIOS32_IRQ_Enable();
}

static void MIOS32_USB_MIDI_RxBufferHandler(u8 bEP)
{
  // atomic operation to avoid conflict with other interrupts
  MIOS32_IRQ_Disable();

  // from USBHwEPRead

  // set read enable bit for specific endpoint
  LPC_USB->USBCtrl = RD_EN | ((bEP & 0xF) << 2);

  // wait for PKT_RDY
  u32 dwLen;
  do {
    dwLen = LPC_USB->USBRxPLen;
  } while( (dwLen & PKT_RDY) == 0 );
        
  // packet valid?
  if( dwLen & DV ) {

    // get length
    s16 count = (dwLen & PKT_LNGTH_MASK) >> 2;

    // check if buffer is free
    if( count && count < (MIOS32_USB_MIDI_RX_BUFFER_SIZE-rx_buffer_size) ) {

      while( count-- > 0 ) {
	// copy received packages into receive buffer
	mios32_midi_package_t package;
	package.ALL = LPC_USB->USBRxData;

	if( MIOS32_MIDI_SendPackageToRxCallback(USB0 + package.cable, package) == 0 ) {
	  rx_buffer[rx_buffer_head] = package.ALL;

	  if( ++rx_buffer_head >= MIOS32_USB_MIDI_RX_BUFFER_SIZE )
	    rx_buffer_head = 0;
	  ++rx_buffer_size;
	}
      }

      // make sure RD_EN is clear
      LPC_USB->USBCtrl = 0;

      // select endpoint and clear buffer
      USBHwCmd(CMD_EP_SELECT | EP2IDX(bEP));
      USBHwCmd(CMD_EP_CLEAR_BUFFER);
    }
  }

  // make sure RD_EN is clear
  LPC_USB->USBCtrl = 0;

  MIOS32_IRQ_Enable();
}
