==> antichambre/MIOS32/mios32/STM32F4xx/mios32_usb_midi.c <==
#include <mios32.h>
#include <usb_core.h>
#include <usbd_req.h>
#include <usb_regs.h>
#include <usbh_core.h>
#include <usbh_conf.h>
#include <usbh_ioreq.h>
#include <usbh_stdreq.h>
#include <usbh_hcs.h>

s32 MIOS32_USB_MIDI_ChangeConnectionState(u8 dev, u8 connected)
{
  
  if(dev == 0){
    // in all cases: re-initialize USB MIDI driver
    // clear buffer counters and busy/wait signals again (e.g., so that no invalid data will be sent out)
    FS_rx_buffer_tail = FS_rx_buffer_head = FS_rx_buffer_size = 0;
    FS_rx_buffer_new_data = 0; // no data received yet
    FS_tx_buffer_tail = FS_tx_buffer_head = FS_tx_buffer_size = 0;
    
    if( connected ) {
      FS_transfer_possible = 1;
      FS_tx_buffer_busy = 0; // buffer not busy anymore
      
#ifndef MIOS32_DONT_USE_USB_HOST
      USBH_FS_MIDI_transfer_state = USBH_MIDI_IDLE;
#endif
    } else {
      // cable disconnected: disable transfers
      FS_transfer_possible = 0;
      FS_tx_buffer_busy = 1; // buffer busy
    }
  }
#ifndef MIOS32_DONT_USE_USB_HS_HOST
  else{
    // in all cases: re-initialize USB MIDI driver
    // clear buffer counters and busy/wait signals again (e.g., so that no invalid data will be sent out)
    HS_rx_buffer_tail = HS_rx_buffer_head = HS_rx_buffer_size = 0;
    HS_rx_buffer_new_data = 0; // no data received yet
    HS_tx_buffer_tail = HS_tx_buffer_head = HS_tx_buffer_size = 0;
    
    if( connected ) {
      HS_transfer_possible = 1;
      HS_tx_buffer_busy = 0; // buffer not busy anymore
      USBH_HS_MIDI_transfer_state = USBH_MIDI_IDLE;
    } else {
      // cable disconnected: disable transfers
      HS_transfer_possible = 0;
      HS_tx_buffer_busy = 1; // buffer busy
    }
  }
#endif
  return 0; // no error
}

s32 MIOS32_USB_MIDI_PackageSend_NonBlocking(mios32_midi_package_t package)
{
  // device available?
#ifndef MIOS32_DONT_USE_USB_HS_HOST
  if( !FS_transfer_possible && !HS_transfer_possible )
#else
  if( !FS_transfer_possible )
#endif
    return -1;
    
  if(package.cable<8){
    // buffer full?
    if( FS_tx_buffer_size >= (MIOS32_USB_MIDI_TX_BUFFER_SIZE-1) ) {
      if( USB_OTG_IsDeviceMode(&USB_OTG_FS_dev) ) {
        // call USB handler, so that we are able to get the buffer free again on next execution
        // (this call simplifies polling loops!)
        // Note: Only in Device mode!
        MIOS32_USB_MIDI_TxBufferHandler();
      }
      // device still available?
      // (ensures that polling loop terminates if cable has been disconnected)
      if( !FS_transfer_possible )
        return -1;
      
      // notify that buffer was full (request retry)
      return -2;
    }
    
    // put package into buffer - this operation should be atomic!
    MIOS32_IRQ_Disable();
    FS_tx_buffer[FS_tx_buffer_head++] = package.ALL;
    if( FS_tx_buffer_head >= MIOS32_USB_MIDI_TX_BUFFER_SIZE )
      FS_tx_buffer_head = 0;
    ++FS_tx_buffer_size;
    MIOS32_IRQ_Enable();
  }
#ifndef MIOS32_DONT_USE_USB_HS_HOST
  else{
    // buffer full?
    if( HS_tx_buffer_size >= (MIOS32_USB_MIDI_TX_BUFFER_SIZE-1) ) {
      // device still available?
      // (ensures that polling loop terminates if cable has been disconnected)
      if( !HS_transfer_possible )
        return -1;
      
      // notify that buffer was full (request retry)
      return -2;
    }
    
    // put package into buffer - this operation should be atomic!
    MIOS32_IRQ_Disable();
    // cable number correction
    package.cable -=8;
    HS_tx_buffer[HS_tx_buffer_head++] = package.ALL;
    if( HS_tx_buffer_head >= MIOS32_USB_MIDI_TX_BUFFER_SIZE )
      HS_tx_buffer_head = 0;
    ++HS_tx_buffer_size;
    MIOS32_IRQ_Enable();
  }
#endif
  return 0;
}

s32 MIOS32_USB_MIDI_PackageReceive(mios32_midi_package_t *package)
{
  // package received from OTG_FS?
  if( FS_rx_buffer_size){
  
    // get package - this operation should be atomic!
    MIOS32_IRQ_Disable();
    package->ALL = FS_rx_buffer[FS_rx_buffer_tail];
    if( ++FS_rx_buffer_tail >= MIOS32_USB_MIDI_RX_BUFFER_SIZE )
      FS_rx_buffer_tail = 0;
    --FS_rx_buffer_size;
    MIOS32_IRQ_Enable();

    return FS_rx_buffer_size;
    
#ifndef MIOS32_DONT_USE_USB_HS_HOST
    // package received from OTG_HS?
  }else if( HS_rx_buffer_size ){
    // get package - this operation should be atomic!
    MIOS32_IRQ_Disable();
    package->ALL = HS_rx_buffer[HS_rx_buffer_tail];
    if( ++HS_rx_buffer_tail >= MIOS32_USB_MIDI_RX_BUFFER_SIZE )
      HS_rx_buffer_tail = 0;
    --HS_rx_buffer_size;
    MIOS32_IRQ_Enable();
    return HS_rx_buffer_size;
#endif
  }else return -1;
}

static void MIOS32_USB_MIDI_TxBufferHandler(void)
{
  // before using the handle: ensure that device (and class) already configured
  if( USB_OTG_FS_dev.dev.class_cb == NULL )
    return;

  // send buffered packages if
  //   - last transfer finished
  //   - new packages are in the buffer
  //   - the device is configured

  // atomic operation to avoid conflict with other interrupts
  MIOS32_IRQ_Disable();

  if( !FS_tx_buffer_busy && FS_tx_buffer_size && FS_transfer_possible ) {
    s16 count = (FS_tx_buffer_size > (MIOS32_USB_MIDI_DATA_IN_SIZE/4)) ? (MIOS32_USB_MIDI_DATA_IN_SIZE/4) : FS_tx_buffer_size;

    // notify that new package is sent
    FS_tx_buffer_busy = 1;

    // send to IN pipe
    FS_tx_buffer_size -= count;

    u32 *buf_addr = (u32 *)USB_FS_tx_buffer;
    int i;
    for(i=0; i<count; ++i) {
      *(buf_addr++) = FS_tx_buffer[FS_tx_buffer_tail];
      if( ++FS_tx_buffer_tail >= MIOS32_USB_MIDI_TX_BUFFER_SIZE )
  FS_tx_buffer_tail = 0;
    }

    DCD_EP_Tx(&USB_OTG_FS_dev, MIOS32_USB_MIDI_DATA_IN_EP, (uint8_t*)&USB_FS_tx_buffer, count*4);
  }

  MIOS32_IRQ_Enable();
}

static void MIOS32_USB_MIDI_RxBufferHandler(void)
{
  s16 count;

  // before using the handle: ensure that device (and class) already configured
  if( USB_OTG_FS_dev.dev.class_cb == NULL ) {
    return;
  }

  // atomic operation to avoid conflict with other interrupts
  MIOS32_IRQ_Disable();

  // check if we can receive new data and get packages to be received from OUT pipe
  u32 ep_num = MIOS32_USB_MIDI_DATA_OUT_EP & 0x7f;
  USB_OTG_EP *ep = &USB_OTG_FS_dev.dev.out_ep[ep_num];
  if( FS_rx_buffer_new_data && (count=ep->xfer_count>>2) ) {
    // check if buffer is free
    if( count < (MIOS32_USB_MIDI_RX_BUFFER_SIZE-FS_rx_buffer_size) ) {
      u32 *buf_addr = (u32 *)USB_FS_rx_buffer;

      // copy received packages into receive buffer
      // this operation should be atomic
      do {
  mios32_midi_package_t package;
  package.ALL = *buf_addr++;

  if( MIOS32_MIDI_SendPackageToRxCallback(USB0 + package.cable, package) == 0 ) {
    FS_rx_buffer[FS_rx_buffer_head] = package.ALL;

    if( ++FS_rx_buffer_head >= MIOS32_USB_MIDI_RX_BUFFER_SIZE )
      FS_rx_buffer_head = 0;
    ++FS_rx_buffer_size;
  }
      } while( --count > 0 );

      // notify, that data has been put into buffer
      FS_rx_buffer_new_data = 0;

      // configuration for next transfer
      DCD_EP_PrepareRx(&USB_OTG_FS_dev,
           MIOS32_USB_MIDI_DATA_OUT_EP,
           (uint8_t*)(USB_FS_rx_buffer),
           MIOS32_USB_MIDI_DATA_OUT_SIZE);
    }
  }

  MIOS32_IRQ_Enable();
}
